--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "babel-runtime": "^6.0.0",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
+    "vuex": "^2.3.1",
     "fastclick": "^1.0.6",
     "vue-lazyload": "1.0.3",
     "jsonp": "0.2.1",
-    "better-scroll":"^0.1.15",
+    "better-scroll": "^0.1.15",
     "axios": "^0.16.1"
   },
   "devDependencies": {
